--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.1",
+    "dotenv": "^16.1.4"
   }
 }
