--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "weblogin-backend",
   "version": "1.0.0",
+  "description": "WebLogin backend with MongoDB and JWT auth",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
-    "dotenv": "^16.1.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3"
   }
 }
