--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
   "name": "weblogin-backend",
   "version": "1.0.0",
-  "description": "WebLogin backend",
-  "main": "server.js",
+  "description": "Stable backend for WebLogin with Paddle + Crypto payments",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "worker": "node worker.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "bullmq": "^1.81.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.8.0",
-    "helmet": "^7.0.0",
-    "hpp": "^0.2.3",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.4",
-    "morgan": "^1.10.0",
-    "mongo-sanitize": "^1.1.0",
-    "stripe": "^12.12.0",
-    "winston": "^3.9.0",
-    "uuid": "^9.0.0",
-    "speakeasy": "^2.0.0"
+    "axios": "^1.6.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   }
 }
