--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "weblogin-backend",
   "version": "1.0.0",
-  "description": "Stable backend for WebLogin with Paddle + Crypto payments",
-  "main": "src/server.js",
-  "type": "module",
+  "description": "Backend server for WebLogin project",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "axios": "^1.6.7"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.1"
   }
 }
