--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "weblogin-backend",
   "version": "1.0.0",
-  "description": "Backend server for WebLogin project",
-  "main": "server.js",
-  "type": "commonjs",
+  "description": "WebLogin backend with Paddle + Binance (crypto) integration - example/starter",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.4.0",
+    "morgan": "^1.10.0",
+    "qrcode": "^1.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
